	1. make DRStrength a bit more efficient.
	2. enable the LMn inner-shell Auger extrapolation.
	3. make all atomic symbols capitalized.
	4. ReinitConfig resets the closed shells to empty.
	5. add MaxPower electron energy distribution, Maxwellian+Powerlaw.
	6. reading file for inner-shell Auger extrapolation.
	7. determine base level in structure.
	8. reimplementation of MULTI array.
	
Version 1.0.3, 12/01/2003
	1. change contact information to my new address.
	2. add --enable-cpic and --enable-fpic options to configure.
	3. fix a bug in RateTable, where the optional list must be given.
	4. fix FLIBS problem for Mac OS 10.2.
	5. need to add -lcc_dynamic on Mac OS 10.3.
	6. fix the method table bug in ppol.c
	7. bug fix in IntegrateRadial function.
	8. array out-of-bound bug fix in orbital.c.
	
Version 1.0.2, 08/15/2003
	1. add iterative method in pfac.pol.
	2. add an optional input file in PolarizationTable to specify 
	   the transitions whose polarization to be calculated.
	3. add Orientation function, which may include depolarization.
	4. fix seg. fault bug related to AvgConfig.
	5. add TRBranch and AIBranch in pfac.fac.
	
Version 1.0.1, 07/31/2003
	1. autoionization and capture rates between magnetic sublevels
	2. add autoionization in pfac.pol for DR satellites.
	3. change the way electron energy and density are set in pfac.pol
	4. allow calculations of DRS specifically from certain target level.
	
version 1.0.0, 07/15/2003
	1. add pol module for constructing magnetic sublevel population
	   models with collisional excitation.
	2. make -m and m magnetic sublevels the same in pol module.
	
version 0.9.9, 07/10/2003
	1. add interpolating routine for CECross.
	2. add plane-wave Born approximation for magnetic sublevel
	   excitation.
	3. change the parameter born[1] to the energy where it is
	   calculated.
	4. add the quadratic and linear interpolation feature in UVIP3P.
	
version 0.9.8, 06/18/2003
	1. bug fix on CETableMSub.
	
version 0.9.7, 06/06/2003