@@ -7,6 +7,7 @@ Version 1.0.4, 02/10/2004
 	6. reading file for inner-shell Auger extrapolation.
 	7. determine base level in structure.
 	8. reimplementation of MULTI array.
+	9. ensure that the wavefunction nodes are correct for high-n states.
 	
 Version 1.0.3, 12/01/2003
 	1. change contact information to my new address.
